[MGM] Update insert data. Update pom to handle LocalDateTime dates. Update openapi. Add Javadoc.
